# obelisk-templates

./: .envrc-example  README.md  dev-deps.txt  flake.nix
.github/workflows/: check.yml  scheduled-bump-cargo-deps.yml  scheduled-bump-cargo-lock.yml  sync-flake-lock.yml
activity-rs/graphql-async/: Cargo.toml  README.md  deployment.toml  flake.nix  obelisk.toml
activity-rs/graphql-async/src/: lib.rs
activity-rs/graphql-sync/: Cargo.toml  flake.nix  obelisk.toml
activity-rs/http-simple-async/: Cargo.toml  Justfile  README.md  deployment.toml  flake.nix  obelisk.toml
activity-rs/http-simple-async/.cargo/: config.toml
activity-rs/http-simple-async/src/: lib.rs
activity-rs/http-simple-async/wit/: impl.wit
activity-rs/http-simple-sync/: .envrc-example  Cargo.toml  Justfile  README.md  flake.nix
activity_fibo/: README.md  obelisk.toml
activity_fibo/src/: lib.rs
activity_fibo/wit/: impl.wit
fibo/activity/: Cargo.toml  README.md  build.rs  deployment.toml  flake.nix  obelisk.toml
fibo/activity/src/: lib.rs
fibo/activity/wit/template-fibo_activity-obelisk-ext/: activity-obelisk-ext.wit
fibo/activity/wit/template-fibo_activity-obelisk-schedule/: activity-obelisk-schedule.wit
fibo/webhook/: README.md  obelisk.toml
fibo/webhook/src/: lib.rs
fibo/webhook_endpoint/: .envrc-example  Cargo.toml  README.md  deployment.toml  obelisk-deps.toml  obelisk.toml
fibo/webhook_endpoint/src/: lib.rs
fibo/webhook_endpoint/wit/: impl.wit
fibo/workflow/: Cargo.toml  README.md  deployment.toml  flake.nix  obelisk-deps.toml  obelisk.toml
fibo/workflow/src/: lib.rs
fibo/workflow/wit/: impl.wit
fibo/workflow/wit/template-fibo_workflow-obelisk-ext/: workflow-obelisk-ext.wit
graphql-github/activity/: .envrc-example  Cargo.toml  README.md  flake.nix  obelisk.toml
graphql-github/activity/.cargo/: config.toml
graphql-github/activity/src/: lib.rs
graphql-github/activity/wit/: impl.wit
http-simple/activity/: Cargo.toml  README.md  flake.nix
http-simple/activity/.cargo/: config.toml
http-simple/activity/src/: lib.rs
http-simple/activity/wit/: impl.wit
scripts/: bump-cargo-deps.sh  dev-deps.sh  obelisk-generate-extensions.sh  obelisk-generate-wit-deps.sh  push-components.sh  sync-from-obelisk-latest.sh  sync-locks-to-templates.sh  test-activity-graphql-github.sh  test-activity-http-simple.sh  test-activity-rs-graphql-async.sh  test-activity-rs-graphql-sync.sh  test-activity-rs-http-simple-async.sh  test-activity-rs-http-simple-sync.sh  test-fibo-activity.sh  test-fibo-webhook.sh  test-fibo-workflow.sh  test-harness.sh
workflow_fibo/: README.md  obelisk.toml
workflow_fibo/src/: lib.rs
