[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.43", features = ["serde"] }
cynic = "3.12.0"
serde_json = "1"
wit-bindgen = "0.51.0"
wstd = "0.6.5"

[build-dependencies]
cynic-codegen = "3.12.0"
anyhow = "1.0"
wit-bindgen-rust = "0.51.0"
wit-parser = "0.244.0"

[profile.release]
opt-level = "s"
