[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.45", features = ["serde"] }
cynic = "3.13.2"
serde_json = "1"
wit-bindgen = "0.57.1"
wstd = "0.6.6"

[build-dependencies]
cynic-codegen = "3.13.2"
anyhow = "1.0"
wit-bindgen-rust = "0.57.1"
wit-parser = "0.251.0"

[profile.release]
opt-level = "s"
