[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.41", features = ["serde"] }
cynic = "3.11.0"
serde_json = "1.0.141"
waki = { version = "0.5.1", features = ["json"] }
wit-bindgen = "0.43.0"

[build-dependencies]
cynic-codegen = "3.11.0"

[profile.release]
opt-level = "s"
