[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.58.0"
wstd = "0.6.7"

[build-dependencies]
anyhow = "1.0"
wit-bindgen-rust = "0.58.0"
wit-parser = "0.252.0"

[profile.release]
opt-level = "s"
debug = "line-tables-only"

